# inference-forge

./: .gitignore  DESIGN.md  QUANTIZATION_INTEGRATION_STATUS.md  QUANTIZATION_SME_DESIGN.md  README.md  RL_OPTIMIZER_README.md  benchmarks.csv  benchmarks.json  config.yaml  pyproject.toml  rl.txt  test_placeholder_cleaning.py  test_profiler.py  test_profiler_simple.py  test_quantization_simple.py  test_quantization_sme.py
forge/: orchestrator.py  sme_registry.py
forge/agents/: base.py
forge/agents/benchmark/: __init__.py  agent.py
forge/agents/coordinator/: __init__.py  agent.py  synthesis.py
forge/agents/profile/: __init__.py  agent.py  design.md  orchestrator.py  verifier.py
forge/agents/profile/profilers/: __init__.py  base.py  benchmark_metrics.py  host_metrics.py  mock_ncu.py  nsys.py  system_metrics.py  vllm_logs.py
forge/core/: checkpoint.py  events.py  health.py  state.py
forge/hardware/: __init__.py  database.py  detector.py
forge/llm/: __init__.py  base.py  consensus.py  nsys_analyzer.py  pool.py  providers.py
forge/rl/: __init__.py  bandit.py  config_space.py  dashboard.py  reward.py  runner.py
forge/smes/: __init__.py  base.py  cpu_optimizations_sme.py  memory_management_sme.py  model_parallelism_sme.py  quantization_sme.py  scheduling_sme.py  speculative_sme.py  utils.py
forge/smes/quantization/: __init__.py  hf_model_finder.py
scripts/: benchmarks.csv  benchmarks.json  run_rl_optimizer.py  start_forge.py
